fix(css): make button aligned to center

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1 {
 
 .try {
   display: flex;
+  align-items: center;
 }
 
 textarea {
